force-app/main/default/objects/EMPLOYEE__x/EMPLOYEE__x.object-meta.xml
<CustomObject>
    <description>EMPLOYEE</description>
    <externalDataSource>testSnowflake</externalDataSource>
    <externalName>TESTDB.MYSCHEMA.EMPLOYEE</externalName>
    <label>EMPLOYEE</label>
    <pluralLabel>EMPLOYEE</pluralLabel>
</CustomObject>