force-app/main/default/objects/EMPLOYEE__x/fields/CREATEDDATE__c.field-meta.xml
<CustomField>
    <fullName>CREATEDDATE__c</fullName>
    <externalDeveloperName>CREATEDDATE</externalDeveloperName>
    <label>CREATEDDATE</label>
    <type>Date</type>
</CustomField>