force-app/main/default/objects/EMPLOYEE__x/fields/DEPARTMENT_ID__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENT_ID__c</fullName>
    <externalDeveloperName>DEPARTMENT_ID</externalDeveloperName>
    <label>DEPARTMENT_ID</label>
    <length>255</length>
    <referenceTo>DEPARTMENT__x</referenceTo>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>ExternalLookup</type>
</CustomField>