force-app/main/default/objects/EMPLOYEE__x/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <externalDeveloperName>EID</externalDeveloperName>
    <label>EID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>