force-app/main/default/objects/EMPLOYEE__x/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <externalDeveloperName>EMAIL</externalDeveloperName>
    <label>EMAIL</label>
    <length>25</length>
    <type>Text</type>
</CustomField>