force-app/main/default/objects/EMPLOYEE__x/fields/EMPLOYEENAME__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEENAME__c</fullName>
    <externalDeveloperName>EMPLOYEENAME</externalDeveloperName>
    <label>EMPLOYEENAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>