force-app/main/default/objects/EMPLOYEE__x/fields/JOBTITLE__c.field-meta.xml
<CustomField>
    <fullName>JOBTITLE__c</fullName>
    <externalDeveloperName>JOBTITLE</externalDeveloperName>
    <label>JOBTITLE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>